--- a/src/components/98-adjustments/_change-password.scss
+++ b/src/components/98-adjustments/_change-password.scss
@@ -2,24 +2,21 @@
 @use '~Settings/fonts'as *;
 
 [id*='Change_Pwd'] {
-  .main-content {
-    background-color: $sapphire-white;
+	.main-content {
+		background-color: $sapphire-white;
 
-    .form-fieldSet {
-      margin-top: 25px;
-    }
+		.form-fieldSet {
+			margin-top: 25px;
+		}
 
-    .change-password {
+		.change-password {
+			.info-message {
+				color: $regular-gray;
 
-
-      .info-message {
-        color: $regular-grey;
-
-        :first-child {
-          font-size: $font-size-normal;
-        }
-      }
-    }
-  }
-
+				:first-child {
+					font-size: $font-size-normal;
+				}
+			}
+		}
+	}
 }
