--- a/src/components/02-generic/_headings.scss
+++ b/src/components/02-generic/_headings.scss
@@ -4,51 +4,51 @@
 h1,
 .h1,
 .heading1 {
-  color: $sapphire-care-blue3;
-  /*secondary-color*/
-  font-size: 24px;
-  font-weight: 700;
-  letter-spacing: 0px;
+	color: $sapphire-care-blue1;
+	/*secondary-color*/
+	font-size: 24px;
+	font-weight: 700;
+	letter-spacing: 0px;
 }
 
 h2,
 .h2,
 .heading2 {
-  color: $regular-grey;
-  font-size: 18px
+	color: $regular-gray;
+	font-size: 18px;
 }
 
 h3,
 .h3,
 .heading3 {
-  color: $sapphire-care-blue3;
-  /*secondary-color*/
-  font-size: 18px;
-  font-weight: 600;
-  letter-spacing: -0.11px;
+	color: $sapphire-care-blue1;
+	/*secondary-color*/
+	font-size: 18px;
+	font-weight: 600;
+	letter-spacing: -0.11px;
 }
 
 h4,
 .h4,
 .heading4 {
-  font-size: 16px;
-  font-weight: 600
+	font-size: 16px;
+	font-weight: 600;
 }
 
 h5,
 .h5,
 .heading5 {
-  font-size: 16px;
+	font-size: 16px;
 }
 
 h6,
 .h6,
 .heading6 {
-  font-size: 14px;
-  line-height: 18px;
+	font-size: 14px;
+	line-height: 18px;
 }
 
 .h7,
 .heading7 {
-  font-size: 13px;
+	font-size: 13px;
 }
