--- a/src/components/05-components/Common/layout/_menu_user-info.scss
+++ b/src/components/05-components/Common/layout/_menu_user-info.scss
@@ -4,124 +4,123 @@
 @use '~Tools/background-gradient'as gradient;
 
 .user-info-custom {
-  @include gradient.backgroundGradient;
-  /*secondary-color*/
-  display: table;
-  margin-bottom: 10px;
-  padding: 30px 0;
-  width: 100%;
+	@include gradient.backgroundGradient;
+	/*secondary-color*/
+	display: table;
+	margin-bottom: 10px;
+	padding: 30px 0;
+	width: 100%;
 }
 
 .user-info-custom .user-info-image {
-  display: table-cell;
-  padding-top: 0;
-  text-align: center;
-  vertical-align: top;
-  width: 100px;
+	display: table-cell;
+	padding-top: 0;
+	text-align: center;
+	vertical-align: top;
+	width: 100px;
 }
 
 .user-info-custom .user-info-image-border {
-  border: 2px solid $regular-alpha;
-  /*primary-color*/
-  border-radius: 50%;
-  display: inline-block;
-  height: 80px;
-  width: 80px;
+	border: 2px solid $regular-alpha;
+	/*primary-color*/
+	border-radius: 50%;
+	display: inline-block;
+	height: 80px;
+	width: 80px;
 }
 
 .user-info-custom .user-info-image-border .upload-file {
-  display: contents;
+	display: contents;
 }
 
 .user-info-custom .user-info-image-border .upload {
-  background: $sapphire-care-blue3;
-  /*secondary-color*/
-  border-radius: 100%;
-  display: inline-block;
-  height: 76px;
-  margin: 0;
-  min-height: initial;
-  overflow: hidden;
-  padding: 0;
-  width: 76px;
+	background: $sapphire-care-blue1;
+	/*secondary-color*/
+	border-radius: 100%;
+	display: inline-block;
+	height: 76px;
+	margin: 0;
+	min-height: initial;
+	overflow: hidden;
+	padding: 0;
+	width: 76px;
 }
 
 .user-info-custom .user-info-image-border .upload img {
-  border-radius: 100%;
-  height: 100%;
+	border-radius: 100%;
+	height: 100%;
 
-  object-fit: cover;
-  object-position: center;
-  position: relative;
-  width: 100%;
-  z-index: 1;
+	object-fit: cover;
+	object-position: center;
+	position: relative;
+	width: 100%;
+	z-index: 1;
 }
 
 .user-info-custom .user-info-image-border .upload .change-image {
-  background-color: rgba(51, 51, 51, .7);
-  border-radius: 100%;
-  bottom: 0;
-  display: inline-block;
-  height: auto;
-  left: 0;
-  opacity: 1;
-  overflow: hidden;
-  padding: 10px 0;
-  position: absolute;
-  right: 0;
-  text-align: center;
-  top: 0;
-  white-space: normal;
-  width: auto;
-  z-index: 5;
+	background-color: rgba(51, 51, 51, 0.7);
+	border-radius: 100%;
+	bottom: 0;
+	display: inline-block;
+	height: auto;
+	left: 0;
+	opacity: 1;
+	overflow: hidden;
+	padding: 10px 0;
+	position: absolute;
+	right: 0;
+	text-align: center;
+	top: 0;
+	white-space: normal;
+	width: auto;
+	z-index: 5;
 }
 
 .user-info-custom .user-info-image-border .upload .change-image .icon {
-  display: block;
-  font-size: 20px;
-  margin: 0;
-  padding: 0;
-  position: static;
-  text-align: center;
-  width: auto;
+	display: block;
+	font-size: 20px;
+	margin: 0;
+	padding: 0;
+	position: static;
+	text-align: center;
+	width: auto;
 }
 
 .user-info-custom .user-info-content {
-  display: table-cell;
-  padding-right: 15px;
-  padding-top: 8px;
-  text-align: left;
-  vertical-align: middle;
+	display: table-cell;
+	padding-right: 15px;
+	padding-top: 8px;
+	text-align: left;
+	vertical-align: middle;
 }
 
 .is-rtl .user-info-custom .user-info-content {
-  padding-left: 15px;
-  padding-right: 0;
-  text-align: right;
+	padding-left: 15px;
+	padding-right: 0;
+	text-align: right;
 }
 
 .user-info-custom .user-info-username,
 .user-info-small-text {
-  color: $light-grey;
-  display: block;
+	color: $light-grey;
+	display: block;
 }
 
 .user-info-custom .user-info-username {
-  font-size: 18px;
-  margin-top: 0;
+	font-size: 18px;
+	margin-top: 0;
 }
 
 .user-info-small-text {
-  font-size: 14px;
-  margin-top: 5px;
+	font-size: 14px;
+	margin-top: 5px;
 }
 
 .user-info-image-size {
-  height: 64px;
-  width: 64px;
+	height: 64px;
+	width: 64px;
 }
 
-
-.user-info-image>.user-info-image-border>img.img-circle {
-  height: 100%;
+.user-info-image > .user-info-image-border > img.img-circle {
+	height: 100%;
 }
