--- a/src/components/05-components/SapphireCare_Patterns/card-info/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/card-info/_index.scss
@@ -3,95 +3,82 @@
 @use '~Tools/arrow-left-arabic'as *;
 @use '~Tools/card-profile-image'as *;
 
-
-
 .cardInfo {
-  height: 110px;
+	height: 110px;
 
-  &.no-label {
-    height: auto;
-    margin-bottom: 20px;
-    padding: 20px 0;
-  }
+	&.no-label {
+		height: auto;
+		margin-bottom: 20px;
+		padding: 20px 0;
+	}
 
-  &__label {
-    color: $regular-grey;
-    margin-bottom: 20px;
+	&__label {
+		color: $regular-gray;
+		margin-bottom: 20px;
 
+		@media screen and (max-width: 320px) {
+			margin-bottom: 5px;
+		}
+	}
 
+	&__container {
+		display: flex;
 
-    @media screen and (max-width:320px) {
-      margin-bottom: 5px;
-    }
-  }
+		.cardInfo__content__wrapper {
+			width: 100%;
 
-  &__container {
-    display: flex;
+			.cardInfo__title {
+				font-family: $latin-bold;
+				font-size: $font-size-heading4;
+				margin-right: 10px;
 
-    .cardInfo__content__wrapper {
-      width: 100%;
+				.is-rtl & {
+					font-family: $arabic-bold;
+				}
+			}
 
-      .cardInfo__title {
-        font-family: $latin-bold;
-        font-size: $font-size-heading4;
-        margin-right: 10px;
+			.cardInfo__content {
+				color: $regular-gray;
+			}
+		}
 
-        .is-rtl & {
-          font-family: $arabic-bold;
-        }
+		.cardInfo__icon {
+			align-items: flex-start;
+			color: $regular-gray;
+			display: flex;
+			font-size: 20px;
+			margin-right: 15px;
 
-      }
+			.is-rtl & {
+				margin-left: 15px;
+				margin-right: unset;
+			}
 
-      .cardInfo__content {
-        color: $regular-grey;
+			.is-loading & {
+				i {
+					//@extend %IsLoading;
+				}
+			}
+		}
 
-      }
+		.cardInfo__link {
+			color: $light-grey;
+			font-size: 30px;
+			text-align: right;
 
-    }
+			> i {
+				//@extend %IsLoading;
+			}
 
+			@extend %arrow-left;
+		}
 
+		.cardInfo__image {
+			@include cardImageSize(50px, $regular-alpha);
 
-    .cardInfo__icon {
-      align-items: flex-start;
-      color: $regular-grey;
-      display: flex;
-      font-size: 20px;
-      margin-right: 15px;
-
-      .is-rtl & {
-        margin-left: 15px;
-        margin-right: unset;
-      }
-
-      .is-loading & {
-        i {
-          //@extend %IsLoading;
-        }
-      }
-    }
-
-    .cardInfo__link {
-      color: $light-grey;
-      font-size: 30px;
-      text-align: right;
-
-      >i {
-        //@extend %IsLoading;
-      }
-
-      @extend %arrow-left;
-    }
-
-    .cardInfo__image {
-      @include cardImageSize(50px, $regular-alpha);
-
-      .is-loading {
-        border-radius: 50%;
-      }
-
-    }
-
-
-  }
-
+			.is-loading {
+				border-radius: 50%;
+			}
+		}
+	}
 }
