--- a/src/components/05-components/SapphireCare_Patterns/card-wizard/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/card-wizard/_index.scss
@@ -2,90 +2,87 @@
 @use '~Settings/fonts'as *;
 @use '~Tools/arrow-left-arabic'as *;
 
-
 .cardWizard {
-  align-items: center;
-  background-color: $sapphire-white;
-  border-radius: 10px;
-  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.1);
-  color: $regular-alpha;
-  display: flex;
-  font-size: $font-size-heading3;
-  height: 70px;
-  justify-content: space-between;
-  margin-bottom: 15px;
-  padding: 25px 15px;
-  -webkit-text-fill-color: $regular-alpha;
+	align-items: center;
+	background-color: $sapphire-white;
+	border-radius: 10px;
+	box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.1);
+	color: $regular-alpha;
+	display: flex;
+	font-size: $font-size-heading3;
+	height: 70px;
+	justify-content: space-between;
+	margin-bottom: 15px;
+	padding: 25px 15px;
+	-webkit-text-fill-color: $regular-alpha;
 
-  &.selected {
-    background-color: $regular-eta;
-  }
+	&.selected {
+		border: 2px solid $regular-alpha;
+	}
 
+	.cardWizard__link {
+		color: $light-grey;
+		font-size: 30px;
+		@extend %arrow-left;
+	}
 
+	&.imageBg {
+		min-height: 140px;
+		overflow: hidden;
+		padding: 0;
+		position: relative;
 
-  .cardWizard__link {
-    color: $light-grey;
-    font-size: 30px;
-    @extend %arrow-left;
-  }
+		.cardWizard__text {
+			align-items: center;
+			background: rgb(0, 43, 73);
+			background: linear-gradient(166deg, rgba(0, 43, 73, 0) 0%, rgba(0, 43, 0, 0.77) 100%, rgba(0, 43, 0, 0.8) 100%);
+			color: $sapphire-white;
+			display: flex;
+			flex-direction: column;
+			height: 100%;
+			justify-content: center;
+			padding-right: 40px;
+			width: 100%;
+			z-index: 1;
 
-  &.imageBg {
-    min-height: 140px;
-    overflow: hidden;
-    padding: 0;
-    position: relative;
+			> span {
+				font-family: $latin-bold;
 
-    .cardWizard__text {
-      align-items: center;
-      background: rgb(0, 43, 73);
-      background: linear-gradient(166deg, rgba(0, 43, 73, 0) 0%, rgba(0, 43, 0, 0.77) 100%, rgba(0, 43, 0, 0.8) 100%);
-      color: $sapphire-white;
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-      justify-content: center;
-      padding-right: 40px;
-      width: 100%;
-      z-index: 1;
+				padding-left: 15px;
+				width: 100%;
 
-      >span {
-        font-family: $latin-bold;
+				.is-rtl & {
+					font-family: $arabic-bold;
+				}
+			}
 
-        padding-left: 15px;
-        width: 100%;
+			:nth-child(2) {
+				font-family: $latin-regular;
+				font-size: 1rem;
 
-        .is-rtl & {
-          font-family: $arabic-bold;
-        }
-      }
+				.is-rtl & {
+					font-family: $arabic-regular;
+				}
+			}
+		}
 
-      :nth-child(2) {
-        font-family: $latin-regular;
-        font-size: 1rem;
+		.cardWizard__link {
+			align-items: center;
+			display: flex;
+			height: 100%;
+			padding-right: 15px;
+			position: absolute;
+			right: 0;
+			top: 0;
+			z-index: 1;
+		}
 
-        .is-rtl & {
-          font-family: $arabic-regular;
-        }
-      }
-    }
-
-    .cardWizard__link {
-      align-items: center;
-      display: flex;
-      height: 100%;
-      padding-right: 15px;
-      position: absolute;
-      right: 0;
-      top: 0;
-      z-index: 1;
-    }
-
-    img {
-      height: 100%;
-      left: 0;
-      position: absolute;
-      top: 0;
-      width: 100%;
-    }
-  }
+		img {
+			height: 100%;
+			left: 0;
+			position: absolute;
+			top: 0;
+			width: 100%;
+		}
+	}
 }
