--- a/src/components/05-components/SapphireCare_Patterns/same-day/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/same-day/_index.scss
@@ -1,51 +1,48 @@
 @use '~Settings/colors'as *;
 @use '~Settings/fonts'as *;
 
-
 .same-day {
-  align-items: center;
-  background: rgb(51, 51, 51, 0.5);
-  display: flex;
-  height: 100%;
-  justify-content: center;
-  left: 0;
-  padding: 0 20px;
-  position: absolute;
-  top: 0;
-  z-index: 100;
+	align-items: center;
+	background: rgb(51, 51, 51, 0.5);
+	display: flex;
+	height: 100%;
+	justify-content: center;
+	left: 0;
+	padding: 0 20px;
+	position: absolute;
+	top: 0;
+	z-index: 100;
 
-  &__container {
-    background-color: $regular-white;
-    padding: 30px 15px;
+	&__container {
+		background-color: $regular-white;
+		padding: 30px 15px;
 
-    .same-day__content {
-      margin: 0 40px;
+		.same-day__content {
+			margin: 0 40px;
 
-      .same-day__title {
-        font-family: $latin-bold;
-        font-size: $font-size-heading3;
-        margin-bottom: 20px;
-        text-align: center;
+			.same-day__title {
+				font-family: $latin-bold;
+				font-size: $font-size-heading3;
+				margin-bottom: 20px;
+				text-align: center;
 
-        .is-rtl & {
-          font-family: $arabic-bold;
-        }
-      }
+				.is-rtl & {
+					font-family: $arabic-bold;
+				}
+			}
 
-      .same-day__label {
-        color: $regular-grey;
-        font-size: $font-size-heading4;
-        margin-bottom: 40px;
-        text-align: center;
-      }
-    }
+			.same-day__label {
+				color: $regular-gray;
+				font-size: $font-size-heading4;
+				margin-bottom: 40px;
+				text-align: center;
+			}
+		}
 
-    .same-day__buttons {
-      >div:first-child {
-        margin-bottom: 5px;
-      }
-    }
-
-
-  }
+		.same-day__buttons {
+			> div:first-child {
+				margin-bottom: 5px;
+			}
+		}
+	}
 }
