--- a/src/components/05-components/SapphireCare_Patterns/small-card/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/small-card/_index.scss
@@ -3,162 +3,162 @@
 @use '~Settings/colors'as *;
 
 .small-card {
-  display: table;
-  min-height: 65px;
-  padding: 14px 0;
-  width: 100%;
+	display: table;
+	min-height: 65px;
+	padding: 14px 0;
+	width: 100%;
 
-  &.medium-height {
-    min-height: 70px;
-  }
+	&.medium-height {
+		min-height: 70px;
+	}
 
-  &.big-height {
-    min-height: 80px;
-    padding: 10px 0;
+	&.big-height {
+		min-height: 80px;
+		padding: 10px 0;
 
-    .small-card-col-left {
-      &.valign-top {
-        padding-top: 0;
+		.small-card-col-left {
+			&.valign-top {
+				padding-top: 0;
 
-        &>.icon {
-          padding-top: 10px;
-        }
-      }
-    }
-  }
+				& > .icon {
+					padding-top: 10px;
+				}
+			}
+		}
+	}
 
-  &.has-bg-color {
-    background-color: $sapphire-white;
-  }
+	&.has-bg-color {
+		background-color: $sapphire-white;
+	}
 
-  &.border-radius {
-    border-radius: 4px;
-  }
+	&.border-radius {
+		border-radius: 4px;
+	}
 
-  &.border-bottom {
-    border-bottom: 1px solid $light-grey;
-  }
+	&.border-bottom {
+		border-bottom: 1px solid $light-grey;
+	}
 
-  &.border-top {
-    border-top: 1px solid $light-grey;
-  }
+	&.border-top {
+		border-top: 1px solid $light-grey;
+	}
 
-  &.box-shadow {
-    -webkit-box-shadow: 0 2px 12px 0 $light-grey;
-    box-shadow: 0 2px 12px 0 $light-grey;
-  }
+	&.box-shadow {
+		-webkit-box-shadow: 0 2px 12px 0 $light-grey;
+		box-shadow: 0 2px 12px 0 $light-grey;
+	}
 
-  &.has-padding-l-r {
-    padding-left: 10px;
-    padding-right: 5px;
-  }
+	&.has-padding-l-r {
+		padding-left: 10px;
+		padding-right: 5px;
+	}
 
-  &.has-extra-padding-t-b {
-    padding-bottom: 20px;
-    padding-top: 20px;
-  }
+	&.has-extra-padding-t-b {
+		padding-bottom: 20px;
+		padding-top: 20px;
+	}
 
-  &.active {
-    background: $regular-zeta;
-  }
+	&.active {
+		border: 2px solid $regular-alpha;
+	}
 }
 
 .is-rtl {
-  .small-card {
-    &.has-padding-l-r {
-      padding-left: 5px;
-      padding-right: 10px;
-    }
-  }
+	.small-card {
+		&.has-padding-l-r {
+			padding-left: 5px;
+			padding-right: 10px;
+		}
+	}
 
-  .small-card-col-left {
-    padding-left: 0;
-    padding-right: 12px;
-  }
+	.small-card-col-left {
+		padding-left: 0;
+		padding-right: 12px;
+	}
 
-  .small-card-col-middle {
-    text-align: right;
-  }
+	.small-card-col-middle {
+		text-align: right;
+	}
 
-  .small-card-col-right {
-    padding-left: 12px;
-    padding-right: 0;
-  }
+	.small-card-col-right {
+		padding-left: 12px;
+		padding-right: 0;
+	}
 }
 
 .small-card-col-left,
 .small-card-col-middle,
 .small-card-col-right {
-  display: table-cell;
-  padding: 0 15px;
-  text-align: center;
-  vertical-align: middle;
+	display: table-cell;
+	padding: 0 15px;
+	text-align: center;
+	vertical-align: middle;
 }
 
 .small-card-col-middle {
-  line-height: 1.3;
-  text-align: left;
-  word-break: break-word;
+	line-height: 1.3;
+	text-align: left;
+	word-break: break-word;
 
-  .card-title {
-    font-weight: 500;
-    padding: 0;
-  }
+	.card-title {
+		font-weight: 500;
+		padding: 0;
+	}
 
-  &.valign-top {
-    vertical-align: top;
-  }
+	&.valign-top {
+		vertical-align: top;
+	}
 }
 
 .small-card-col-left {
-  min-width: 35px;
-  padding-right: 0;
-  width: 1%;
+	min-width: 35px;
+	padding-right: 0;
+	width: 1%;
 
-  &.fixedWidth {
-    max-width: auto;
-    min-width: auto;
-    width: 35px;
-  }
+	&.fixedWidth {
+		max-width: auto;
+		min-width: auto;
+		width: 35px;
+	}
 
-  &.valign-top {
-    vertical-align: top;
+	&.valign-top {
+		vertical-align: top;
 
-    &>.icon {
-      padding-top: 6px;
-    }
-  }
+		& > .icon {
+			padding-top: 6px;
+		}
+	}
 
-  img {
-    border: 2px solid $light-grey;
-    border-radius: 100%;
-    height: auto;
-    max-width: 60px;
+	img {
+		border: 2px solid $light-grey;
+		border-radius: 100%;
+		height: auto;
+		max-width: 60px;
 
-    &.bigger {
-      width: 60px;
-    }
-  }
+		&.bigger {
+			width: 60px;
+		}
+	}
 }
 
 .small-card-col-right {
-  padding-left: 0;
-  width: 35px;
+	padding-left: 0;
+	width: 35px;
 
-  &.fixedWidth150 {
-    max-width: auto;
-    min-width: auto;
-    width: 150px;
-  }
+	&.fixedWidth150 {
+		max-width: auto;
+		min-width: auto;
+		width: 150px;
+	}
 }
 
 .campaign {
-  .small-card-col-left {
-    img {
-      border: 1px solid $light-grey;
-      border-radius: 4px;
-      height: 80px;
-      max-width: 70px;
-    }
-  }
+	.small-card-col-left {
+		img {
+			border: 1px solid $light-grey;
+			border-radius: 4px;
+			height: 80px;
+			max-width: 70px;
+		}
+	}
 }
