--- a/src/components/98-adjustments/_exam-list.scss
+++ b/src/components/98-adjustments/_exam-list.scss
@@ -2,54 +2,52 @@
 @use '~Settings/fonts'as *;
 
 [id*='ExamList'] {
-  .list {
-    background-color: transparent;
-  }
+	.list {
+		background-color: transparent;
+	}
 
-  .group-month {
-    border-bottom: 1px solid $light-grey;
-    color: $dark-blue;
-    font-family: $latin-bold;
-    font-size: $font-size-heading3;
-    margin-bottom: 20px;
-    padding-bottom: 5px;
+	.group-month {
+		border-bottom: 1px solid $light-grey;
+		color: $dark-blue;
+		font-family: $latin-bold;
+		font-size: $font-size-heading3;
+		margin-bottom: 20px;
+		padding-bottom: 5px;
 
-    .is-rtl & {
-      font-family: $arabic-bold;
-    }
-  }
+		.is-rtl & {
+			font-family: $arabic-bold;
+		}
+	}
 
-  .cardInfo {
-    height: auto;
-    margin: 0;
-    min-height: 44px;
-    padding: 0;
+	.cardInfo {
+		height: auto;
+		margin: 0;
+		min-height: 44px;
+		padding: 0;
 
-    &__container {
-      .Title {
-        font-family: $latin-bold;
-        font-size: $font-size-heading4;
-        line-height: $font-size-heading3;
+		&__container {
+			.Title {
+				font-family: $latin-bold;
+				font-size: $font-size-heading4;
+				line-height: $font-size-heading3;
 
-        .is-rtl & {
-          font-family: $arabic-bold;
-        }
-      }
+				.is-rtl & {
+					font-family: $arabic-bold;
+				}
+			}
 
-      .cardInfo__icon {
-        color: $regular-alpha;
-        font-size: 30px;
-      }
-    }
+			.cardInfo__icon {
+				color: $regular-alpha;
+				font-size: 30px;
+			}
+		}
 
-    &.disabled {
-
-      .cardInfo__icon {
-        color: $regular-grey;
-        opacity: 0.6;
-        pointer-events: none;
-      }
-
-    }
-  }
+		&.disabled {
+			.cardInfo__icon {
+				color: $regular-gray;
+				opacity: 0.6;
+				pointer-events: none;
+			}
+		}
+	}
 }
