--- a/src/components/98-adjustments/_first-login.scss
+++ b/src/components/98-adjustments/_first-login.scss
@@ -1,36 +1,34 @@
 @use '~Settings/colors'as *;
 @use '~Settings/fonts'as *;
 
-
 [id*='FirstLogin'] {
-  .main-content {
-    background-color: $sapphire-white;
+	.main-content {
+		background-color: $sapphire-white;
 
-    .section {
-      height: 100%;
+		.section {
+			height: 100%;
 
-      .section-title {
-        padding: 25px 0;
-      }
+			.section-title {
+				padding: 25px 0;
+			}
 
-      .error-container {
-        margin-top: 5px;
-      }
+			.error-container {
+				margin-top: 5px;
+			}
 
-      .button-container {
-        margin-top: 30px;
-      }
+			.button-container {
+				margin-top: 30px;
+			}
 
-      .info-message {
-        color: $regular-grey;
-        margin-top: 80px;
+			.info-message {
+				color: $regular-gray;
+				margin-top: 80px;
 
-        :first-child {
-          font-size: $font-size-normal;
-          margin-bottom: 10px;
-        }
-      }
-    }
-
-  }
+				:first-child {
+					font-size: $font-size-normal;
+					margin-bottom: 10px;
+				}
+			}
+		}
+	}
 }
